--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "PyTorch-YOLOv3"]
-	path = PyTorch-YOLOv3
+[submodule "PyTorch_YOLOv3"]
+	path = PyTorch_YOLOv3
 	url = https://github.com/eriklindernoren/PyTorch-YOLOv3.git
